# DSStuff

./: .gitignore  LICENSE  README.md
BlankDSProject/: README.md  bayesGridSearch.py  requirements.txt  test.py  train.py  unit_test.py  z_review_mdls.bat
BlankDSProject/data/unit_test/: somedata.txt
BlankDSProject/models/: mdl_stats.txt
BlankDSProject/utils/: dataSetup.py  mdl_xgboost.py  my_logger.py  projParams.py
BlankDSProject/utils/docker/: Dockerfile  docker-compose.yml
SimpleTextClassification/: README.md  stringcleaner.py  test.py  train.py
kubeflow/: Makefile  model
kubeflow-app/: Makefile  README.md  pyproject.toml  trialtem.yaml
kubeflow-app/deploy/: Dockerfile
kubeflow-app/scripts/: export.sh
kubeflow-app/src/kubeflow/: predict.py  train.py
kubeflow-app/tests/: test_kubeflow.py
kubeflow/importantlocal/: envoy.yaml  kserve-secret.yaml  kserve-securityaccount.yaml  pipelineaccess.yaml
mlops/: Makefile  Pulumi.dev.yaml  Pulumi.mlops.yaml  Pulumi.yaml  ReadME.md  __main__.py  pyproject.toml  requirements.txt
mlops/Charts/metaflow/: values.yaml
mlops/Charts/metaflow/charts/metaflow-service/: values.yaml
mlops/Charts/mlflow/: values.yaml
mlops/Charts/mlflow/templates/: deployment.yaml  ingress.yaml  secret-mino.yaml
mlops/SampleScripts/: metaflow.py  mlflow.py  pyproject.toml
models/: README.md  config.py  pyproject.toml  settings.toml
models/models/src/: app.py  classesdata.py  trainers.py
models/models/src/helpers/: dataloader.py  parameters.py  utility.py
models/tests/: test_poetrytest.py
