[tool.poetry]
name = "kubeflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.0.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
boto3 = "^1.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
train="kubeflow.train:train"
predict="kubeflow.predict:predict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
